exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": "./index.js"}

`;

exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": "./index.js"}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(10): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}

`;

exports[`invalid(10): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}
    |                       ^^^^^^^^^^^^^^^^^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(11): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": "./index.mjs"}}

`;

exports[`invalid(11): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": "./index.mjs"}}
    |                                         ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(12): {\"type\": \"commonjs\", \"exports\": {\"types\": \"./index.d.mts\", \"default\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"type": "commonjs", "exports": {"types": "./index.d.mts", "default": "./index.cjs"}}

`;

exports[`invalid(12): {\"type\": \"commonjs\", \"exports\": {\"types\": \"./index.d.mts\", \"default\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"type": "commonjs", "exports": {"types": "./index.d.mts", "default": "./index.cjs"}}
    |                                           ^^^^^^^^^^^^^^^ Type declaration \`./index.d.mts\` uses ES module format but its JavaScript target uses CommonJS format.

`;

exports[`invalid(13): {\"exports\": {\"types\": \"./index.d.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.d.ts", "default": "./index.mjs"}}

`;

exports[`invalid(13): {\"exports\": {\"types\": \"./index.d.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.d.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^^^ Type declaration \`./index.d.ts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(14): {\"types\": \"./index.d.ts\", \"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": "./index.cjs"}}

`;

exports[`invalid(14): {\"types\": \"./index.d.ts\", \"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": "./index.cjs"}}
    |                                                                                                                  ^^^^^^^^^^^^^ Exported JavaScript target \`./index.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(15): {\"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": {\"default\": \"./index.cjs\"}}} 1`] = `

[Input]
  1 | {"exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": {"default": "./index.cjs"}}}

`;

exports[`invalid(15): {\"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": {\"default\": \"./index.cjs\"}}} 2`] = `

Message:
> 1 | {"exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": {"default": "./index.cjs"}}}
    |                                                                                                     ^^^^^^^^^^^^^ Exported JavaScript target \`./index.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(16): {\"exports\": {\"types\": {\"import\": \"./import.d.ts\"}, \"import\": \"./import.js\", \"require\": \"./require.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./import.d.ts"}, "import": "./import.js", "require": "./require.js"}}

`;

exports[`invalid(16): {\"exports\": {\"types\": {\"import\": \"./import.d.ts\"}, \"import\": \"./import.js\", \"require\": \"./require.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./import.d.ts"}, "import": "./import.js", "require": "./require.js"}}
    |                                                                                        ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(17): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": \"./import.d.cts\", \"require\": \"./require.d.cts\"}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": "./import.d.cts", "require": "./require.d.cts"}, "import": "./import.mjs", "require": "./require.cjs"}}

`;

exports[`invalid(17): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": \"./import.d.cts\", \"require\": \"./require.d.cts\"}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": "./import.d.cts", "require": "./require.d.cts"}, "import": "./import.mjs", "require": "./require.cjs"}}
    |                                                    ^^^^^^^^^^^^^^^^ Type declaration \`./import.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(18): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"types\": {\"import\": \"./import.d.ts\", \"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"types": {"import": "./import.d.ts", "require": "./require.d.ts"},
  6 | 		"import": "./import.js",
  7 | 		"require": "./require.js"
  8 | 	}
  9 | }

`;

exports[`invalid(18): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"types\": {\"import\": \"./import.d.ts\", \"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"types": {"import": "./import.d.ts", "require": "./require.d.ts"},
> 6 | 		"import": "./import.js",
    | 		          ^^^^^^^^^^^^^ Exported JavaScript target \`./import.js\` has no corresponding \`types\` condition.
  7 | 		"require": "./require.js"
  8 | 	}
  9 | }

`;

exports[`invalid(18): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"types\": {\"import\": \"./import.d.ts\", \"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 3`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"types": {"import": "./import.d.ts", "require": "./require.d.ts"},
  6 | 		"import": "./import.js",
> 7 | 		"require": "./require.js"
    | 		           ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.
  8 | 	}
  9 | }

`;

exports[`invalid(2): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}

`;

exports[`invalid(2): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}
    |                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(3): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}

`;

exports[`invalid(3): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}
    |                                       ^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(4): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}

`;

exports[`invalid(4): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}
    |                                        ^^^^^^^^^^^ Type conditions must come before runtime conditions in a conditions object.

`;

exports[`invalid(5): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.js", "default": "./index.js"}}

`;

exports[`invalid(5): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.js", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(6): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}

`;

exports[`invalid(6): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.ts\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(7): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": null, "default": "./index.js"}}

`;

exports[`invalid(7): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                       ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(7): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(8): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": true, "default": "./index.js"}}

`;

exports[`invalid(8): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": true, "default": "./index.js"}}
    |                       ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(8): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": true, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(9): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "", "default": "./index.js"}}

`;

exports[`invalid(9): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "", "default": "./index.js"}}
    |                       ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(9): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": "", "default": "./index.js"}}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;
